Added Progress Bar

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
 				<option value="35">35</option>
 				<option value="36">36</option>					
 			</select>
+			
 			<input type="checkbox" id="ch">Не в случайном порядке</br>
 			<button id="startB">Создать Билет</button>
+		</div>
+
+		<div id="prc">
+			<progress id="prBr"></progress>
+			<p>Загрузка Ресурсов. Подождите</p>
 		</div>
 
 		<div id="canvasHolder">
